$Id: ChangeLog,v 1.101 2010/03/30 12:04:58 tho Exp $

ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html

LibU 2.x.y
	- [rb] malloc based implementation, both using contiguous (i.e. double
	       sized) and wrapped buffer.
	- [test] make it work on non-UNIXes

LibU 2.0.0
	- [pqueue] added new priority queue module
	- [rb] added new ring buffer module
	- [test] completely revamped, new interfaces
	- [net] module implementation and interfaces revamped
	- [uri] complete support for RFC 3986; added u_uri_knead interface to 
	  create conformant URI strings; added tester
	- [carpal] dbg(), warn(), info(), err() and friends have been prefixed 
	  with "u_" to avoid conflicts with the <err.h> header
	- [config] u_config_print_to_fp with brace delimiters for children records;
	  documentation fixes by Mickael Auger ; don't dump the 'include' 
	  directive when serializing and/or saving an u_config_t object to 
	  file (would break semantical equivalence) 
	- [hmap] added u_hmap_foreach_arg which accepts a user defined parameter
	  that is supplied to the callback function ; add "easy" interface to
	  simplify some common use cases ; updated docs
	- [array] u_array_set_ptr and u_array_get_ptr interfaces changed;
	  added interfaces for intmax_t and uintmax_t types; use C99 types 
	  explicitly (_Complex and _Bool), to avoid clash with bool and complex 
	  possibly #define'd by the user
	- [buf] added u_buf_save interface
	- [misc] some minor fixes
	- [string] minor fixes and cleanup
	- [pwd] internally use u_strtok instead of deprecated u_tokenize 
	- fix configure bug which prevented IPv6 and UNIX sockets bits inclusion;
	  also bring back to life --no_ipv6 and --no_unixsock configure flags; 
	  new --no_sctp command line option to explicitly disable SCTP bits

LibU 1.4.1
	- [missing] u_va_copy added
	- [string] u_string_do_vprintf bug fix (don't use va_list twice)
	- [test] list tests fix for 64-bit platforms

LibU 1.4.0