@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.19 2010/03/22 18:19:02 tho Exp $
+# $Id: Makefile,v 1.20 2010/04/07 19:38:56 tho Exp $
 
 include common.mk
 include ../Makefile.conf
@@ -11,6 +11,7 @@ SRCS += toolbox/misc.c
 SRCS += toolbox/str.c
 SRCS += toolbox/buf.c
 SRCS += toolbox/log.c
+SRCS += toolbox/lexer.c
 
 ifndef NO_TEST
     SRCS += toolbox/test.c
